# AutoAgents

./: .gitignore  Cargo.toml  Dockerfile  GPU_MAX_README.md  PROPRIETARY_LICENSE  README.md  RULE_MASTER.md  auto_sync.ps1  cline_mcp_settings.json  fix_build_issues.ps1  flake.nix  gpu_max_stress.ps1  gpu_monitor.ps1  gpu_optimizer.ps1  gpu_workload_generator.rs  implementation_plan.md  simple_gpu_test.ps1  start_gpu_max.bat  sync_monitor.ps1  system_health.ps1
.github/: sync_reminder.sh
.github/workflows/: infrastructure-assassin-testing.yml
cncf-autoagents/: Cargo.toml  README.md  demo.rs
cncf-autoagents/conductor/: Cargo.toml
cncf-autoagents/conductor/src/: lib.rs
cncf-autoagents/forge/: Cargo.toml
cncf-autoagents/forge/src/: lib.rs
cncf-autoagents/fortress/: Cargo.toml
cncf-autoagents/fortress/src/: config.rs  gateway.rs  lib.rs  mcp_registry.rs
crates/curation-engine/: Cargo.toml
crates/curation-engine/src/: lib.rs
crates/infrastructure-assassin/: Cargo.toml
crates/infrastructure-assassin/src/: lib.rs  unified_api.rs
crates/infrastructure-assassin/src/analytics/: mod.rs  performance.rs  revenue.rs
crates/infrastructure-assassin/src/browser/: enhanced.rs  factory.rs  js_execution.rs  mod.rs  network.rs  screenshot.rs  storage.rs  test_integration.rs
crates/infrastructure-assassin/src/orchestration/: mod.rs
crates/infrastructure-assassin/src/security/: enforcer.rs  mod.rs
crates/infrastructure-assassin/src/tools/: mcp_orchestrator.rs  mod.rs
crates/infrastructure-assassin/tests/: browser_sandbox_test.rs
crates/linkerd-gateway/: Cargo.toml
crates/linkerd-gateway/src/: config.rs  gateway.rs  lib.rs  main.rs  metrics.rs  middleware.rs  routing.rs  security.rs
crates/linkerd-gateway/src/middleware/: auth.rs  cache.rs  rate_limit.rs
crates/liquid-edge/: Cargo.toml
deployment/: README.md  docker-compose.yml
deployment/mcp-servers/: filesystem-mcp.sh
examples/: infrastructure-assassin-demo.rs
nixos/: configuration.nix
web/: index.html  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
