[workspace]
members = [
    "fortress",
    "forge",
    "conductor",
    "infrastructure",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CNCF AutoAgents Team"]
description = "Bulletproof CNCF-based infrastructure stack for autonomous agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/liquidos-ai/cncf-autoagents"
keywords = ["cncf", "agents", "wasm", "infrastructure"]
categories = ["cloud-native", "infrastructure"]

[workspace.dependencies]
# Core async runtime - minimal features for production
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }

# HTTP and networking - essential only
hyper = { version = "0.14", features = ["http1", "server", "client"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.4", features = ["cors", "compression-gzip", "trace"] }

# Serialization - core only
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration - minimal
config = "0.13"

# Logging - structured production logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Redis - distributed caching and messaging
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }

# WASM runtime - Fermyon Spin SDK
spin-sdk = "2.0"

# MCP integration - BVEnterprisess registry
bv-enterprise-mcp = "0.1"

# Security - JWT and TLS
jsonwebtoken = "9.0"
rustls = "0.21"
rustls-pemfile = "1.0"

# Metrics - Prometheus
prometheus = "0.13"
lazy_static = "1.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities - essential only
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

# CLI - for service management
clap = { version = "4.0", features = ["derive"] }

# Testing - minimal test dependencies
tokio-test = "0.4"
tempfile = "3.0"
