[package]
name = "curation-engine"
version = "0.1.0"
edition = "2021"
description = "Control plane for AutoAgents infrastructure orchestration"
license = "MIT OR Apache-2.0"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# HTTP and networking
axum = { version = "0.7", features = ["json", "multipart", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database and caching
redis = { version = "0.23", features = ["tokio-comp", "connection-manager", "json"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

# Configuration
config = "0.13"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.19"
opentelemetry-jaeger = "0.18"

# Security
jsonwebtoken = "9.0"
bcrypt = "0.15"
rustls = "0.21"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

# WASM support
wasmtime = "36.0"
wasm-bindgen = "0.2"

# Message queue
lapin = "2.3"  # AMQP client for RabbitMQ

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# MCP support
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3.0"
mockall = "0.11"
tokio-test = "0.4"
