[package]
name = "infrastructure-assassin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Infrastructure Assassin - Unified Rust/WASM platform for zero-cost development with MCP tool orchestration"
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Workspace dependencies
autoagents-core.workspace = true
autoagents.workspace = true
autoagents-llm.workspace = true

# WASM-specific dependencies (pure Rust only)
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "EventTarget",
  "Event",
  "Performance",
  "PerformanceTiming",
] }
serde-wasm-bindgen = "0.6.5"
gloo-timers = "0.3.0"
wasm-logger = "0.2.0"

# Common Rust dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
uuid.workspace = true
base64.workspace = true
chrono.workspace = true
tokio.workspace = true
async-trait.workspace = true

[dependencies.wasm-bindgen-futures]
version = "0.4.45"
optional = true

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:wasm-bindgen-futures"]
