[package]
name = "infrastructure-assassin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Infrastructure Assassin - Unified Rust/WASM platform for zero-cost development with MCP tool orchestration"
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Workspace dependencies (Infrastructure Assassin Core)
autoagents-core.workspace = true
autoagents.workspace = true

# WASM-specific dependencies (Rule Master ยง1: Pure Rust/WASM only)
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "EventTarget",
  "Event",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "ImageData",
  "Blob",
  "Url",
  "File",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
  "AbortController",
  "AbortSignal",
  "FetchEvent",
  "ExtendableEvent",
  "ServiceWorkerGlobalScope",
  "Storage",
  "StorageEvent",
  "IdbDatabase",
  "IdbObjectStore",
  "IdbTransaction",
  "IdbKeyRange",
  "Crypto",
  "CryptoKey",
  "SubtleCrypto",
  "AesKeyGenParams",
  "HkdfParams",
  "Pbkdf2Params",
  "RsaOaepParams",
  "AesGcmParams",
  "EcKeyGenParams",
  "AesCbcParams",
  "Performance",
  "PerformanceEntry",
  "PerformanceMark",
  "PerformanceMeasure",
] }
serde-wasm-bindgen = "0.6.5"
gloo-timers = "0.3.0"

# Essential Rust dependencies (reduced to 16 total per RULE_MASTER)
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
async-trait.workspace = true
base64.workspace = true
log.workspace = true

[dependencies.wasm-bindgen-futures]
version = "0.4.45"
optional = true

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:wasm-bindgen-futures"]
