[package]
name = "linkerd-gateway"
version = "0.1.0"
edition = "2021"
description = "Linkerd2-proxy based high-performance gateway for AutoAgents"
license = "MIT OR Apache-2.0"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# HTTP and networking
hyper = { version = "0.14", features = ["full"] }
tonic = "0.9"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.13"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.19"
opentelemetry-jaeger = "0.18"

# Security
rustls = "0.21"
rustls-pemfile = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Redis for caching
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.0"
mockall = "0.11"
